--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h2 class="text-center">
       &nbsp;<strong>Shiv Baba yaad hai?</strong>
     </h2>
-    <center><img src="/image/maxresdefault.jpg" class="img-responsive"></center>
+    <center><img src="image/maxresdefault.jpg" class="img-responsive"></center>
   </body>
 </html>
